FIX: Add article__figure class on Article images for fixing the overflow image

--- a/styles/objects/_article.scss
+++ b/styles/objects/_article.scss
@@ -13,7 +13,6 @@
         margin: $s-xs 0;
         display: flex;
         flex-direction: column;
-        
     }
 
     &__subtitle {
@@ -27,10 +26,15 @@
         border-left: 4px solid var(--dark);
     }
 
+    &__figure{
+        width: 100%;
+    }
+
     &__image {
         margin-block: $s-sm;
         object-fit: contain;
-        align-self: center;
+        width: 100%;
+        height: 100%;
         @include beautyful-shadow;
     }
 
